fix: Prevent awkward comma line breaks in multi-value facet display
When displaying records with multiple values for fields like 'Congress',
commas were wrapping to their own lines creating an awkward layout like:

  92nd (1971-1973)
  ,
  94th (1975-1977)

SOLUTION:
- Wrapped each facet link in a <span class='facet-link'> for better wrapping control
- Changed join separator from ', ' to ',&nbsp;' so commas stay attached to next value
- Added CSS word-break: keep-all to prevent awkward breaks

Result: Multi-value facets now display inline cleanly without orphaned commas

--- a/hydra/app/assets/stylesheets/blacklight.scss
+++ b/hydra/app/assets/stylesheets/blacklight.scss
@@ -9,6 +9,12 @@
     }
 }
 
+// Fix for multi-value facet display: prevent awkward comma line breaks
+.facet-link {
+    display: inline;
+    word-break: keep-all;
+}
+
 .container {
     width: 100%;
     margin: 40px auto;
